Начала добавлять разметку
Добавила header и часть main (слайдер)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>HTML Academy: Нёрдс</title>
+	</head>
+	<body>
+		<header class="main-header">
+			<nav class="main-navigation">
+				<img src="img/index-logo.svg" width="" height="" alt="Логотип дизайн-студии Нёрдс">
+				<ul class="site-navigation">
+					<li><a href="info.html">Студия</a></li>
+					<li><a href="customers.html">Клиенты</a></li>
+					<li><a href="shop.html">Магазин</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
+				</ul>
+				<ul class="user-navigation">
+					<li class="basket">Корзина</li>
+				</ul>
+			</nav>
+		</header>
+		<main class="container">
+			<h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
+			<section class="merits">
+				<h2 class="visually-hidden">Достоинства</h2>
+				<ul class="merits-list">
+					<li class="merit-item">
+						<h3>Долго, дорого, скрупулезно.</h3>
+						<p>
+						Математически выверенный дизайн<br>
+						для вашего сайта или мобильного приложения.
+						</p>
+						<a class="button" href="#">Узнать больше</a>
+					</li>
+					<li class="merit-item">
+						<h3>Любим математику как никто другой</h3>
+						<p>
+						Никакого креатива, только математические формулы<br>
+						для расчета идеальных пропорций.
+						</p>
+						<a class="button" href="#">Узнать больше</a>
+					</li>
+					<li class="merit-item">
+						<h3>Только ночь, только хардкор</h3>
+						<p>
+						Работать днем, как все? Мы против этого.<br>
+						Ближе к полуночи работа только начинается.
+						</p>
+						<a class="button" href="#">Узнать больше</a>
+					</li>
+				</ul>
+			</section>
+		</main>
+		<footer>
+		
+		</footer>
+	</body>
 </html>
