--- a/index.html
+++ b/index.html
@@ -18,41 +18,172 @@
 					<li class="basket">Корзина</li>
 				</ul>
 			</nav>
+			<section class="slider">
+				<h2 class="visually-hidden">Достоинства</h2>
+				<div class="slider-item">
+					<h2>Долго, дорого, скрупулезно.</h2>
+					<p>
+					Математически выверенный дизайн<br>
+					для вашего сайта или мобильного приложения.
+					</p>
+					<a class="button" href="#">Узнать больше</a>
+				</div>
+				<div class="slider-item">
+					<h2>Любим математику как никто другой</h2>
+					<p>
+					Никакого креатива, только математические формулы<br>
+					для расчета идеальных пропорций.
+					</p>
+					<a class="button" href="#">Узнать больше</a>
+				</div>
+				<div class="slider-item">
+					<h2>Только ночь, только хардкор</h2>
+					<p>
+					Работать днем, как все? Мы против этого.<br>
+					Ближе к полуночи работа только начинается.
+					</p>
+					<a class="button" href="#">Узнать больше</a>
+				</div>
+				<div class="slider-controls">
+					<input class="slider-controls-radio" type="radio" name="slider" value="btn1" checked>
+					<input class="slider-controls-radio" type="radio" name="slider" value="btn2">
+					<input class="slider-controls-radio" type="radio" name="slider" value="btn3">
+				</div>
+			</section>
 		</header>
+
 		<main class="container">
 			<h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
-			<section class="merits">
-				<h2 class="visually-hidden">Достоинства</h2>
-				<ul class="merits-list">
-					<li class="merit-item">
-						<h3>Долго, дорого, скрупулезно.</h3>
-						<p>
-						Математически выверенный дизайн<br>
-						для вашего сайта или мобильного приложения.
+			<section class="services">
+				<h2 class="visually-hidden">Услуги</h2>
+				<ul class="services-list">
+					<li class="services-item site">
+						<h3>Веб-сайты</h3>
+						<p>Мир никогда не будет прежним<br>
+						после того, как увидит ваш сайт!
 						</p>
-						<a class="button" href="#">Узнать больше</a>
+						<a class="button" href="#">Заказать</a>
 					</li>
-					<li class="merit-item">
-						<h3>Любим математику как никто другой</h3>
-						<p>
-						Никакого креатива, только математические формулы<br>
-						для расчета идеальных пропорций.
-						</p>
-						<a class="button" href="#">Узнать больше</a>
+					<li class="services-item application">
+						<h3>Приложения</h3>
+						<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+						<a class="button" href="#">Заказать</a>
 					</li>
-					<li class="merit-item">
-						<h3>Только ночь, только хардкор</h3>
+					<li class="services-item present">
+						<h3>Презентации</h3>
 						<p>
-						Работать днем, как все? Мы против этого.<br>
-						Ближе к полуночи работа только начинается.
+						Вы даже не подозреваете,<br />
+						насколько вы изумительны!
 						</p>
-						<a class="button" href="#">Узнать больше</a>
+						<a class="button" href="#">Заказать</a>
+					</li>
+				</ul>
+			</section>
+			
+			<section class="rules">
+				<h2 class="visually-hidden">Принципы работы</h2>
+				<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая дизайн-студия из Краснодара</b>
+				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+				<h4>Выполняем заказы на разработку:</h4>
+				<ul class="rules-work">
+					<li>Веб-сайтов любой сложности</li>
+					<li>Мобильных приложений для iOS и Android</li>
+					<li>Слайдшоу и видео для корпоративных презентаций</li>
+				</ul>
+			</section>
+			
+			<section class="statistic">
+				<img src="img/logo_color.png" width="" height="" alt="Логотип дизайн-студии Нёрдс">
+				<h4>С 2004 года любим точность во всем:</h4>
+				<p class="statistic-information">
+					<b>146%</b><br>
+					Уровень самоотдачи
+				</p>
+				<p class="statistic-information">
+					<b>100%</b><br>
+					Соблюдение сроков
+				</p>
+				<p class="statistic-information">
+					<b>50%</b><br>
+					Минимальная предоплата
+				</p>
+			</section>
+			<section class="partners">
+			<h2 class="visually-hidden">Партнеры</h2>
+				<ul class="partners-list">
+					<li class="partners-item">
+						<a href="https://htmlacademy.ru/intensive/htmlcss">
+							<img src="img/logo_html_academy.png" width="" height="" alt="Логотип HTML Academy">
+						</a>
+					</li>
+					<li class="partners-item">
+						<a href="#">
+							<img src="img/logo_borodinski.png" width="" height="" alt="Логотип барбершопа «Бородинский»">
+						</a>
+					</li>
+					<li class="partners-item">
+						<a href="#">
+							<img src="img/logo_pink.png" width="" height="" alt="Логотип Pink">
+						</a>
+					</li>
+					<li class="partners-item">
+						<a href="#">
+							<img src="img/logo_mishka.png" width="" height="" alt="Логотип Mishka">
+						</a>
 					</li>
 				</ul>
 			</section>
 		</main>
-		<footer>
-		
+
+		<footer class="main-footer">
+			<section class="contacts">
+				<div class="footer-map">
+				</div>
+				<div class="footer-contacts">
+					<b>Nёrds Design Studio</b>
+					<p>
+					191186, Санкт-Петербург,<br>
+					ул. Б. Конюшенная, д. 19/8
+					</p>
+					<p>
+					тел. +7(812) 275-75-75
+					</p>
+					<a class="button button-contacts" href="contacts.html">Обратная связь</a>
+				</div>
+			</section>
+			<section class="social">
+				<div class="footer-social">
+					<ul>
+						<li><a class="social-button" href="#">Вконтекте</a></li>
+						<li><a class="social-button" href="#">Фейсбук</a></li>
+						<li><a class="social-button" href="#">Инстаграм</a></li>
+					</ul>
+				</div>
+				<div class="footer-social-slogan">
+					<b>Давайте дружить, это выгодно!</b>
+					<p>Скидка 10% для друзей из социальных сетей</p>
+				</div>
+			</section>
 		</footer>
+
+		<section class="modal modal-write-us">
+			<h2>Напишите нам</h2>
+			<form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+				<p class="write-us-item">
+				Ваше имя:
+					<input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста">
+				</p>
+				<p class="write-us-item">
+				Ваш e-mail:
+					<input type="text" name="mail" value="" placeholder="Для отправки ответа">
+				</p>
+				<p class="write-us-item">
+				Текст письма:
+					<input type="text" name="text" value="" placeholder="В свободной форме">
+				</p>
+				<button class="button" type="submit">Отправить</button>
+			</form>
+			<span class="modal-close">x</span>
+		</section>
 	</body>
 </html>
