--- a/shop.html
+++ b/shop.html
@@ -22,5 +22,68 @@
 			</nav>
 			<h1>Магазин готовых проектов</h1>
 		</header>
+
+		<main class="container">
+			<section class="filters">
+				<h2 class="visually-hidden">Фильтр товаров</h2>
+				<form class="filter" method="get" action="http://echo.htmlacademy.ru">
+					<fieldset>
+						<legend>Стоимость:</legend>
+						<ul>
+							<li class="filter-option">
+							наверстать ползунок
+							</li>
+						</ul>
+					</fieldset>
+					<fieldset>
+						<legend>Сетка:</legend>
+						<ul>
+							<li class="filter-option">
+								<input class="filter-input filter-input-radio" type="radio" name="grid" value="adaptation" checked>
+								Адаптивная
+							</li>
+							<li class="filter-option">
+								<input class="filter-input filter-input-radio" type="radio" name="grid" value="fixed">
+								Фиксированная
+							</li>
+							<li class="filter-option">
+								<input class="filter-input filter-input-radio" type="radio" name="grid" value="stretchy">
+								Резиновая
+							</li>
+						</ul>
+					</fieldset>
+					<fieldset>
+						<legend>Особенности:</legend>
+						<ul>
+							<li class="filter-option">
+								<input class="filter-input filter-input-checkbox" type="checkbox" name="slider" checked>
+								Слайдер
+							</li>
+							<li class="filter-option">
+								<input class="filter-input filter-input-checkbox" type="checkbox" name="advantages">
+								Блок преимуществ
+							</li>
+							<li class="filter-option">
+								<input class="filter-input filter-input-checkbox" type="checkbox" name="news" checked>
+								Новости
+							</li>
+							<li class="filter-option">
+								<input class="filter-input filter-input-checkbox" type="checkbox" name="gallery">
+								Галерея
+							</li>
+							<li class="filter-option">
+								<input class="filter-input filter-input-checkbox" type="checkbox" name="basket">
+								Корзина
+							</li>
+						</ul>
+					</fieldset>
+					<button type="submit" class="filter-button button">Показать</button>
+				</form>
+			</section>
+		</main>
+
+		<footer>
+			
+		</footer>
 	</body>
 </html>
