Наверстала часть  второго блока
часть с сортировкой

--- a/shop.html
+++ b/shop.html
@@ -80,6 +80,19 @@
 					<button type="submit" class="filter-button button">Показать</button>
 				</form>
 			</section>
+			
+			<section class="catalog">
+				<h2 class="visually-hidden">Список шаблонов сайтов</h2>
+				<div class="sorting">
+					<b>Сортировать:</b>
+						<a href="#" class="sorting-current">по цене</a>
+						<a href="#">по типу</a>
+						<a href="#">по названию</a>
+					<span class="sorting-up"></span>
+					<span class="sorting-down sorting-current"></span>
+				</div>
+				
+			</section>
 		</main>
 
 		<footer>
