Доверстала второй блок в каталоге
Доверстала каталог

--- a/shop.html
+++ b/shop.html
@@ -91,12 +91,158 @@
 					<span class="sorting-up"></span>
 					<span class="sorting-down sorting-current"></span>
 				</div>
-				
+				<ul class="catalog-list">
+					<li class="catalog-item">
+						<h3 class="visually-hidden">Sedona</h3>
+						<p>
+							<a href="#">
+								<img src="img/sedona_preview.jpg" width="" height="" alt="шаблон сайта Sedona">
+							</a>
+						</p>
+						<div class="catalog-buy-item">
+							<h4>Sedona</h4>
+							<p>Информационный сайт для туристов</p>
+							<p class="catalog-item-price">
+								<a class="button button-price">9 900 руб.</a>
+							</p>
+						</div>
+					</li>
+					<li class="catalog-item">
+						<h3 class="visually-hidden">Pink App</h3>
+						<p>
+							<a href="#">
+								<img src="img/pink_app.jpg" width="" height="" alt="шаблон сайта Pink App">
+							</a>
+						</p>
+						<div class="catalog-buy-item">
+							<h4>Pink</h4>
+							<p>Продуктовый лендинг приложения для iOS и Android</p>
+							<p class="catalog-item-price">
+								<a class="button button-price">9 900 руб.</a>
+							</p>
+						</div>
+					</li>
+					<li class="catalog-item">
+						<h3 class="visually-hidden">Barbershop</h3>
+						<p>
+							<a href="#">
+								<img src="img/barbershop.jpg" width="" height="" alt="шаблон сайта Barbershop">
+							</a>
+						</p>
+						<div class="catalog-buy-item">
+							<h4>Barbershop</h4>
+							<p>Сайт салоны красоты.<br />
+							Для мужчин, да.
+							</p>
+							<p class="catalog-item-price">
+								<a class="button button-price">9 900 руб.</a>
+							</p>
+						</div>
+					</li>
+					<li class="catalog-item">
+						<h3 class="visually-hidden">Mishka</h3>
+						<p>
+							<a href="#">
+								<img src="img/mishka.jpg" width="" height="" alt="шаблон сайта Mishka">
+							</a>
+						</p>
+						<div class="catalog-buy-item">
+							<h4>Mishka</h4>
+							<p>Интернет-магазин вязанных игрушек</p>
+							<p class="catalog-item-price">
+								<a class="button button-price">9 900 руб.</a>
+							</p>
+						</div>
+					</li>
+					<li class="catalog-item">
+						<h3 class="visually-hidden">A Plus</h3>
+						<p>
+							<a href="#">
+								<img src="img/a_plus.jpg" width="" height="" alt="шаблон сайта A Plus">
+							</a>
+						</p>
+						<div class="catalog-buy-item">
+							<h4>A Plus</h4>
+							<p>Лендинг курсов повышения квалификации</p>
+							<p class="catalog-item-price">
+								<a class="button button-price">9 900 руб.</a>
+							</p>
+						</div>
+					</li>
+					<li class="catalog-item">
+						<h3 class="visually-hidden">Кваст</h3>
+						<p>
+							<a href="#">
+								<img src="img/kvast.jpg" width="" height="" alt="шаблон сайта Кваст">
+							</a>
+						</p>
+						<div class="catalog-buy-item">
+							<h4>Кваст</h4>
+							<p>Промо-сайт производителя крафтового кваса</p>
+							<p class="catalog-item-price">
+								<a class="button button-price">9 900 руб.</a>
+							</p>
+						</div>
+					</li>
+				</ul>
+				<ul class="pagination-list">
+					<li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+					<li class="pagination-item"><a href="#">2</a></li>
+					<li class="pagination-item"><a href="#">3</a></li>
+					<li class="pagination-item"><a href="#">Следующая</a></li>
+				</ul>
 			</section>
 		</main>
 
-		<footer>
-			
+		<footer class="main-footer">
+			<section class="contacts">
+				<div class="footer-map">
+				</div>
+				<div class="footer-contacts">
+					<b>Nёrds Design Studio</b>
+					<p>
+					191186, Санкт-Петербург,<br>
+					ул. Б. Конюшенная, д. 19/8
+					</p>
+					<p>
+					тел. +7(812) 275-75-75
+					</p>
+					<a class="button button-contacts" href="contacts.html">Обратная связь</a>
+				</div>
+			</section>
+			<section class="social">
+				<div class="footer-social">
+					<ul>
+						<li><a class="social-button" href="#">Вконтекте</a></li>
+						<li><a class="social-button" href="#">Фейсбук</a></li>
+						<li><a class="social-button" href="#">Инстаграм</a></li>
+					</ul>
+				</div>
+				<div class="footer-social-slogan">
+					<b>Давайте дружить, это выгодно!</b>
+					<p>Скидка 10% для друзей из социальных сетей</p>
+				</div>
+			</section>
 		</footer>
+		
+		<section class="modal modal-write-us">
+			<h2>Напишите нам</h2>
+			<form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+				<p class="write-us-item">
+				Ваше имя:
+					<input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста">
+				</p>
+				<p class="write-us-item">
+				Ваш e-mail:
+					<input type="text" name="mail" value="" placeholder="Для отправки ответа">
+				</p>
+				<p class="write-us-item">
+				Текст письма:
+					<input type="text" name="text" value="" placeholder="В свободной форме">
+				</p>
+				<button class="button" type="submit">Отправить</button>
+			</form>
+			<span class="modal-close">x</span>
+		</section>
 	</body>
 </html>
