--- a/shop.html
+++ b/shop.html
@@ -103,7 +103,7 @@
 							<h4>Sedona</h4>
 							<p>Информационный сайт для туристов</p>
 							<p class="catalog-item-price">
-								<a class="button button-price">9 900 руб.</a>
+								<a class="button button-price" href="#">9 900 руб.</a>
 							</p>
 						</div>
 					</li>
@@ -118,7 +118,7 @@
 							<h4>Pink</h4>
 							<p>Продуктовый лендинг приложения для iOS и Android</p>
 							<p class="catalog-item-price">
-								<a class="button button-price">9 900 руб.</a>
+								<a class="button button-price" href="#">9 900 руб.</a>
 							</p>
 						</div>
 					</li>
@@ -135,7 +135,7 @@
 							Для мужчин, да.
 							</p>
 							<p class="catalog-item-price">
-								<a class="button button-price">9 900 руб.</a>
+								<a class="button button-price" href="#">9 900 руб.</a>
 							</p>
 						</div>
 					</li>
@@ -150,7 +150,7 @@
 							<h4>Mishka</h4>
 							<p>Интернет-магазин вязанных игрушек</p>
 							<p class="catalog-item-price">
-								<a class="button button-price">9 900 руб.</a>
+								<a class="button button-price" href="#">9 900 руб.</a>
 							</p>
 						</div>
 					</li>
@@ -165,7 +165,7 @@
 							<h4>A Plus</h4>
 							<p>Лендинг курсов повышения квалификации</p>
 							<p class="catalog-item-price">
-								<a class="button button-price">9 900 руб.</a>
+								<a class="button button-price" href="#">9 900 руб.</a>
 							</p>
 						</div>
 					</li>
@@ -180,7 +180,7 @@
 							<h4>Кваст</h4>
 							<p>Промо-сайт производителя крафтового кваса</p>
 							<p class="catalog-item-price">
-								<a class="button button-price">9 900 руб.</a>
+								<a class="button button-price" href="#">9 900 руб.</a>
 							</p>
 						</div>
 					</li>
