Внесла правки в shop
Внесла правки в разметку внутренней страницы согласно замечаниям куратора.

--- a/shop.html
+++ b/shop.html
@@ -13,17 +13,17 @@
 				<ul class="site-navigation">
 					<li><a href="info.html">Студия</a></li>
 					<li><a href="customers.html">Клиенты</a></li>
-					<li class="site-navigation-current"><a href="shop.html">Магазин</a></li>
+					<li class="site-navigation-current"><a>Магазин</a></li>
 					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 				<ul class="user-navigation">
 					<li class="basket">Корзина</li>
 				</ul>
 			</nav>
-			<h1>Магазин готовых проектов</h1>
 		</header>
 
 		<main class="container">
+			<h1>Магазин готовых проектов</h1>
 			<section class="filters">
 				<h2 class="visually-hidden">Фильтр товаров</h2>
 				<form class="filter" method="get" action="http://echo.htmlacademy.ru">
@@ -85,108 +85,78 @@
 				<h2 class="visually-hidden">Список шаблонов сайтов</h2>
 				<div class="sorting">
 					<b>Сортировать:</b>
-						<a href="#" class="sorting-current">по цене</a>
-						<a href="#">по типу</a>
-						<a href="#">по названию</a>
+					<a href="#" class="sorting-current">по цене</a>
+					<a href="#">по типу</a>
+					<a href="#">по названию</a>
 					<span class="sorting-up"></span>
 					<span class="sorting-down sorting-current"></span>
 				</div>
 				<ul class="catalog-list">
 					<li class="catalog-item">
-						<h3 class="visually-hidden">Sedona</h3>
 						<p>
-							<a href="#">
-								<img src="img/sedona_preview.jpg" width="" height="" alt="шаблон сайта Sedona">
-							</a>
+							<img src="img/sedona_preview.jpg" width="" height="" alt="шаблон сайта Sedona">
 						</p>
 						<div class="catalog-buy-item">
-							<h4>Sedona</h4>
+							<h3><a class="button button-price" href="#">Sedona</a></h3>
 							<p>Информационный сайт для туристов</p>
-							<p class="catalog-item-price">
-								<a class="button button-price" href="#">9 900 руб.</a>
-							</p>
+							<p class="catalog-item-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
-						<h3 class="visually-hidden">Pink App</h3>
 						<p>
-							<a href="#">
-								<img src="img/pink_app.jpg" width="" height="" alt="шаблон сайта Pink App">
-							</a>
+							<img src="img/pink_app.jpg" width="" height="" alt="шаблон сайта Pink App">
 						</p>
 						<div class="catalog-buy-item">
-							<h4>Pink</h4>
+							<h3><a class="button button-price" href="#">Pink</a></h3>
 							<p>Продуктовый лендинг приложения для iOS и Android</p>
-							<p class="catalog-item-price">
-								<a class="button button-price" href="#">9 900 руб.</a>
-							</p>
+							<p class="catalog-item-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
-						<h3 class="visually-hidden">Barbershop</h3>
 						<p>
-							<a href="#">
-								<img src="img/barbershop.jpg" width="" height="" alt="шаблон сайта Barbershop">
-							</a>
+							<img src="img/barbershop.jpg" width="" height="" alt="шаблон сайта Barbershop">
 						</p>
 						<div class="catalog-buy-item">
-							<h4>Barbershop</h4>
+							<h3><a class="button button-price" href="#">Barbershop</a></h3>
 							<p>Сайт салоны красоты.<br />
 							Для мужчин, да.
 							</p>
-							<p class="catalog-item-price">
-								<a class="button button-price" href="#">9 900 руб.</a>
-							</p>
+							<p class="catalog-item-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
-						<h3 class="visually-hidden">Mishka</h3>
 						<p>
-							<a href="#">
-								<img src="img/mishka.jpg" width="" height="" alt="шаблон сайта Mishka">
-							</a>
+							<img src="img/mishka.jpg" width="" height="" alt="шаблон сайта Mishka">
 						</p>
 						<div class="catalog-buy-item">
-							<h4>Mishka</h4>
+							<h3><a class="button button-price" href="#">Mishka</a></h3>
 							<p>Интернет-магазин вязанных игрушек</p>
-							<p class="catalog-item-price">
-								<a class="button button-price" href="#">9 900 руб.</a>
-							</p>
+							<p class="catalog-item-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
-						<h3 class="visually-hidden">A Plus</h3>
 						<p>
-							<a href="#">
-								<img src="img/a_plus.jpg" width="" height="" alt="шаблон сайта A Plus">
-							</a>
+							<img src="img/a_plus.jpg" width="" height="" alt="шаблон сайта A Plus">
 						</p>
 						<div class="catalog-buy-item">
-							<h4>A Plus</h4>
+							<h3><a class="button button-price" href="#">A Plus</a></h3>
 							<p>Лендинг курсов повышения квалификации</p>
-							<p class="catalog-item-price">
-								<a class="button button-price" href="#">9 900 руб.</a>
-							</p>
+							<p class="catalog-item-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
-						<h3 class="visually-hidden">Кваст</h3>
 						<p>
-							<a href="#">
-								<img src="img/kvast.jpg" width="" height="" alt="шаблон сайта Кваст">
-							</a>
+							<img src="img/kvast.jpg" width="" height="" alt="шаблон сайта Кваст">
 						</p>
 						<div class="catalog-buy-item">
-							<h4>Кваст</h4>
+							<h3><a class="button button-price" href="#">Кваст</a></h3>
 							<p>Промо-сайт производителя крафтового кваса</p>
-							<p class="catalog-item-price">
-								<a class="button button-price" href="#">9 900 руб.</a>
-							</p>
+							<p class="catalog-item-price">9 900 руб.</p>
 						</div>
 					</li>
 				</ul>
 				<ul class="pagination-list">
-					<li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+					<li class="pagination-item pagination-item-current"><a>1</a></li>
 					<li class="pagination-item"><a href="#">2</a></li>
 					<li class="pagination-item"><a href="#">3</a></li>
 					<li class="pagination-item"><a href="#">Следующая</a></li>
@@ -213,7 +183,7 @@
 			<section class="social">
 				<div class="footer-social">
 					<ul>
-						<li><a class="social-button" href="#">Вконтекте</a></li>
+						<li><a class="social-button" href="#">Вконтакте</a></li>
 						<li><a class="social-button" href="#">Фейсбук</a></li>
 						<li><a class="social-button" href="#">Инстаграм</a></li>
 					</ul>
