Внесла правки в разметку главной и внутренней страниц
 Согласно замечаниям куратора.

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 				<h4>С 2004 года любим точность во всем:</h4>
 				<table class="statistic-information">
 					<tr>
-						<th>146%</th>
-						<th>100%</th>
-						<th>50%</th>
+						<td>146%</td>
+						<td>100%</td>
+						<td>50%</td>
 					</tr>
 					<tr>
-						<td>Уровень самоотдачи</td>
-						<td>Соблюдение сроков</td>
-						<td>Минимальная предоплата</td>
+						<th>Уровень самоотдачи</th>
+						<th>Соблюдение сроков</th>
+						<th>Минимальная предоплата</th>
 					</tr>
 				</table>
 			</section>
