--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML Academy: Нёрдс</title>
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
 			<nav class="main-navigation">
-				<img src="img/index-logo.svg" width="" height="" alt="Логотип дизайн-студии Нёрдс">
+				<img src="img/index_logo.svg" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
 				<ul class="site-navigation">
 					<li><a href="info.html">Студия</a></li>
 					<li><a href="customers.html">Клиенты</a></li>
@@ -93,7 +94,7 @@
 			</section>
 			
 			<section class="statistic">
-				<img src="img/logo_color.png" width="" height="" alt="Логотип дизайн-студии Нёрдс">
+				<img src="img/logo_color.jpg" width="360" height="208" alt="Логотип дизайн-студии Нёрдс">
 				<h4>С 2004 года любим точность во всем:</h4>
 				<table class="statistic-information">
 					<tr>
@@ -113,22 +114,22 @@
 				<ul class="partners-list">
 					<li class="partners-item">
 						<a href="https://htmlacademy.ru/intensive/htmlcss">
-							<img src="img/logo_html_academy.png" width="" height="" alt="Логотип HTML Academy">
+							<img src="img/logo_html_academy.png" width="260" height="180" alt="Логотип HTML Academy">
 						</a>
 					</li>
 					<li class="partners-item">
 						<a href="#">
-							<img src="img/logo_borodinski.png" width="" height="" alt="Логотип барбершопа «Бородинский»">
+							<img src="img/logo_borodinski.png" width="260" height="180" alt="Логотип барбершопа «Бородинский»">
 						</a>
 					</li>
 					<li class="partners-item">
 						<a href="#">
-							<img src="img/logo_pink.png" width="" height="" alt="Логотип Pink">
+							<img src="img/logo_pink.png" width="260" height="180" alt="Логотип Pink">
 						</a>
 					</li>
 					<li class="partners-item">
 						<a href="#">
-							<img src="img/logo_mishka.png" width="" height="" alt="Логотип Mishka">
+							<img src="img/logo_mishka.png" width="260" height="180" alt="Логотип Mishka">
 						</a>
 					</li>
 				</ul>
