--- a/shop.html
+++ b/shop.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML Academy: Нёрдс</title>
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
 			<nav class="main-navigation">
 				<a href="index.html">
-					<img src="img/index-logo.svg" width="" height="" alt="Логотип дизайн-студии Нёрдс">
+					<img src="img/index_logo.svg" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
 				</a>
 				<ul class="site-navigation">
 					<li><a href="info.html">Студия</a></li>
@@ -93,7 +94,7 @@
 				</div>
 				<ul class="catalog-list">
 					<li class="catalog-item">
-						<img src="img/sedona_preview.jpg" width="" height="" alt="шаблон сайта Sedona">
+						<img src="img/sedona_preview.jpg" width="360" height="576" alt="шаблон сайта Sedona">
 						<div class="catalog-buy-item">
 							<h3><a class="button button-price" href="#">Sedona</a></h3>
 							<p>Информационный сайт для туристов</p>
@@ -101,7 +102,7 @@
 						</div>
 					</li>
 					<li class="catalog-item">
-						<img src="img/pink_app.jpg" width="" height="" alt="шаблон сайта Pink App">
+						<img src="img/pink_app_preview.jpg" width="360" height="576" alt="шаблон сайта Pink App">
 						<div class="catalog-buy-item">
 							<h3><a class="button button-price" href="#">Pink</a></h3>
 							<p>Продуктовый лендинг приложения для iOS и Android</p>
@@ -109,7 +110,7 @@
 						</div>
 					</li>
 					<li class="catalog-item">
-						<img src="img/barbershop.jpg" width="" height="" alt="шаблон сайта Barbershop">
+						<img src="img/barbershop_preview.jpg" width="360" height="576" alt="шаблон сайта Barbershop">
 						<div class="catalog-buy-item">
 							<h3><a class="button button-price" href="#">Barbershop</a></h3>
 							<p>Сайт салоны красоты.<br />
@@ -119,7 +120,7 @@
 						</div>
 					</li>
 					<li class="catalog-item">
-						<img src="img/mishka.jpg" width="" height="" alt="шаблон сайта Mishka">
+						<img src="img/mishka_preview.jpg" width="360" height="576" alt="шаблон сайта Mishka">
 						<div class="catalog-buy-item">
 							<h3><a class="button button-price" href="#">Mishka</a></h3>
 							<p>Интернет-магазин вязанных игрушек</p>
@@ -127,7 +128,7 @@
 						</div>
 					</li>
 					<li class="catalog-item">
-						<img src="img/a_plus.jpg" width="" height="" alt="шаблон сайта A Plus">
+						<img src="img/a_plus_preview.jpg" width="360" height="576" alt="шаблон сайта A Plus">
 						<div class="catalog-buy-item">
 							<h3><a class="button button-price" href="#">A Plus</a></h3>
 							<p>Лендинг курсов повышения квалификации</p>
@@ -135,7 +136,7 @@
 						</div>
 					</li>
 					<li class="catalog-item">
-						<img src="img/kvast.jpg" width="" height="" alt="шаблон сайта Кваст">
+						<img src="img/kvast_preview.jpg" width="360" height="576" alt="шаблон сайта Кваст">
 						<div class="catalog-buy-item">
 							<h3><a class="button button-price" href="#">Кваст</a></h3>
 							<p>Промо-сайт производителя крафтового кваса</p>
