--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<section class="slider">
 				<h2 class="visually-hidden">Достоинства</h2>
 				<div class="slider-item">
-					<h2>Долго, дорого, скрупулезно.</h2>
+					<h2 class="slider-title">Долго, дорого, скрупулезно.</h2>
 					<p>
 					Математически выверенный дизайн<br>
 					для вашего сайта или мобильного приложения.
@@ -30,7 +30,7 @@
 					<a class="button" href="#">Узнать больше</a>
 				</div>
 				<div class="slider-item">
-					<h2>Любим математику как никто другой</h2>
+					<h2 class="slider-title">Любим математику как никто другой</h2>
 					<p>
 					Никакого креатива, только математические формулы<br>
 					для расчета идеальных пропорций.
@@ -38,7 +38,7 @@
 					<a class="button" href="#">Узнать больше</a>
 				</div>
 				<div class="slider-item">
-					<h2>Только ночь, только хардкор</h2>
+					<h2 class="slider-title">Только ночь, только хардкор</h2>
 					<p>
 					Работать днем, как все? Мы против этого.<br>
 					Ближе к полуночи работа только начинается.
@@ -59,19 +59,19 @@
 				<h2 class="visually-hidden">Услуги</h2>
 				<ul class="services-list">
 					<li class="services-item site">
-						<h3>Веб-сайты</h3>
+						<h3 class="services-subtitle">Веб-сайты</h3>
 						<p>Мир никогда не будет прежним<br>
 						после того, как увидит ваш сайт!
 						</p>
 						<a class="button" href="#">Заказать</a>
 					</li>
 					<li class="services-item application">
-						<h3>Приложения</h3>
+						<h3 class="services-subtitle">Приложения</h3>
 						<p>Покорите топ-10 приложений в AppStore и Google Play</p>
 						<a class="button" href="#">Заказать</a>
 					</li>
 					<li class="services-item present">
-						<h3>Презентации</h3>
+						<h3 class="services-subtitle">Презентации</h3>
 						<p>
 						Вы даже не подозреваете,<br>
 						насколько вы изумительны!
@@ -85,7 +85,7 @@
 				<h2 class="visually-hidden">Принципы работы</h2>
 				<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая дизайн-студия из Краснодара</b>
 				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-				<h4>Выполняем заказы на разработку:</h4>
+				<h4 class="rules-subtitle">Выполняем заказы на разработку:</h4>
 				<ul class="rules-work">
 					<li>Веб-сайтов любой сложности</li>
 					<li>Мобильных приложений для iOS и Android</li>
@@ -95,7 +95,7 @@
 			
 			<section class="statistic">
 				<img src="img/logo_color.jpg" width="360" height="208" alt="Логотип дизайн-студии Нёрдс">
-				<h4>С 2004 года любим точность во всем:</h4>
+				<h4 class="rules-subtitle">С 2004 года любим точность во всем:</h4>
 				<table class="statistic-information">
 					<tr>
 						<td>146%</td>
