--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
 		</header>
 
 		<main class="container">
-			<h1>Магазин готовых проектов</h1>
+			<h1 class="page-title">Магазин готовых проектов</h1>
 			<section class="filters">
 				<h2 class="visually-hidden">Фильтр товаров</h2>
 				<form class="filter" method="get" action="http://echo.htmlacademy.ru">
