--- a/shop.html
+++ b/shop.html
@@ -156,6 +156,7 @@
 		<footer class="main-footer">
 			<section class="contacts">
 				<div class="footer-map">
+          <img src="img/map_contacts.jpg" width="" height="" alt="Карта">
 				</div>
 				<div class="footer-contacts">
 					<b>Nёrds Design Studio</b>
