--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 				<ul class="user-navigation">
-					<li class="basket">Корзина</li>
+					<li class="basket">
+						<a class="basket" href="basket.html">Корзина</a>
+					</li>
 				</ul>
 			</nav>
 			<section class="slider">
@@ -46,9 +48,15 @@
 					<a class="button" href="#">Узнать больше</a>
 				</div>
 				<div class="slider-controls">
-					<input class="slider-controls-radio" type="radio" name="slider" value="btn1" checked>
-					<input class="slider-controls-radio" type="radio" name="slider" value="btn2">
-					<input class="slider-controls-radio" type="radio" name="slider" value="btn3">
+					<label for="btn1">Слайд 1
+						<input class="slider-controls-radio" id="btn1" type="radio" name="slider" value="btn1" checked>
+					</label>
+					<label for="btn2">Слайд 2
+						<input class="slider-controls-radio" id="btn2" type="radio" name="slider" value="btn2">
+					</label>
+					<label for="btn3">Слайд 3
+						<input class="slider-controls-radio" id="btn3" type="radio" name="slider" value="btn3">
+					</label>
 				</div>
 			</section>
 		</header>
@@ -172,20 +180,20 @@
 			<h2>Напишите нам</h2>
 			<form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
 				<p class="write-us-item">
-				Ваше имя:
-					<input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста">
+					<label for="write-us-name">Ваше имя:</label>
+					<input id="write-us-name" type="text" name="name" value="" placeholder="Представьтесь, пожалуйста">
 				</p>
 				<p class="write-us-item">
-				Ваш e-mail:
-					<input type="email" name="mail" value="" placeholder="Для отправки ответа">
+					<label for="write-us-mail">Ваш e-mail:</label>
+					<input id="write-us-mail" type="email" name="mail" value="" placeholder="Для отправки ответа">
 				</p>
 				<p class="write-us-item">
-				Текст письма:
+					<label for="text-field">Текст письма:</label>
 					<textarea name="text" id="text-field" rows="6" placeholder="В свободной форме"></textarea>
 				</p>
 				<button class="button" type="submit">Отправить</button>
 			</form>
-			<span class="modal-close">x</span>
+			<button class="modal-close" type="button">Закрыть</button>
 		</section>
 	</body>
 </html>
