--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 					<a class="button" href="#">Узнать больше</a>
 				</div>
 				<div class="slider-controls">
-					<label for="btn1">Слайд 1
+					<label class="visually-hidden" for="btn1">Слайд 1
 						<input class="slider-controls-radio" id="btn1" type="radio" name="slider" value="btn1" checked>
 					</label>
-					<label for="btn2">Слайд 2
+					<label class="visually-hidden" for="btn2">Слайд 2
 						<input class="slider-controls-radio" id="btn2" type="radio" name="slider" value="btn2">
 					</label>
-					<label for="btn3">Слайд 3
+					<label class="visually-hidden" for="btn3">Слайд 3
 						<input class="slider-controls-radio" id="btn3" type="radio" name="slider" value="btn3">
 					</label>
 				</div>
