--- a/index.html
+++ b/index.html
@@ -110,14 +110,22 @@
 					<h4>С 2004 года любим точность во всем:</h4>
 					<table class="statistic-information">
 						<tr>
-							<td>146%</td>
-							<td>100%</td>
-							<td>50%</td>
+							<td>146<sup>%</sup></td>
+							<td>100<sup>%</sup></td>
+							<td>50<sup>%</sup></td>
 						</tr>
 						<tr>
-							<th>Уровень самоотдачи</th>
-							<th>Соблюдение сроков</th>
-							<th>Минимальная предоплата</th>
+							<th>
+							Уровень<br>
+							самоотдачи
+							</th>
+							<th>
+							Соблюдени<br>
+							сроков
+							</th>
+							<th>Минимальная<br>
+							предоплата
+							</th>
 						</tr>
 					</table>
 				</section>
